# fast_api_project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  blog.db  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: __init__.py  auth.py  blogs.py  users.py
app/cli/: db.py
app/core/: config.py  database.py  exceptions.py  logging.py  migrations.py  security.py
app/middleware/: cors.py  logging.py
app/models/: __init__.py  blog.py  user.py
app/schemas/: auth.py  blog.py  user.py
app/services/: auth_service.py  blog_service.py  user_service.py
app/utils/: helpers.py
blog/: init_db.py  main.py  models.py  schemas.py
blog/repository/: authentication.py  blog.py  user.py
blog/routers/: authentication.py  blog.py  user.py
docs/: API.md
scripts/: dev.sh
tests/: test_main.py
